fix cookie notification layout issue

--- a/main/src/scss/opintoni/_cookie-notification.scss
+++ b/main/src/scss/opintoni/_cookie-notification.scss
@@ -19,12 +19,12 @@
   display: table;
   position: fixed;
   bottom: 0;
-  left: 0;
-  width: 100vw;
+  width: calc(100vw - 2em);
   padding: 1em;
   background-color: $black;
   color: $white;
   z-index: 10;
+  box-sizing: content-box;
 
   &__content, &__actions {
     display: table-cell;
